--- a/src/components/nav/NavBar.css
+++ b/src/components/nav/NavBar.css
@@ -7,6 +7,7 @@
 .navbar__item {
     flex-basis: 20%;
     list-style-type: none;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 .navbar__logout {
