--- a/src/components/MainComponent.css
+++ b/src/components/MainComponent.css
@@ -9,18 +9,18 @@ input,
 select,
 textarea {
   color: #404040;
-  font-family: "Comfortaa", Arial, sans-serif;
+  font-family: Arial, sans-serif;
   font-size: 14px;
   line-height: 1.5;
 }
 
 body {
     padding: 0 3rem;
-
+    
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: "Patua One", serif;
+  font-family: Arial, sans-serif;
   letter-spacing: 2px;
 }
 
