--- a/src/components/views/ApplicationViews.css
+++ b/src/components/views/ApplicationViews.css
@@ -4,7 +4,7 @@
     align-content: center;
     justify-content: center;
     align-items: center;
-
+    font-family: Arial, sans-serif;
 
 }
 .title--main {
@@ -12,13 +12,132 @@
     margin-block-end: 0;
     align-items: center;
     flex-direction: column;
-
+    font-family: Arial, sans-serif;
     
+  }
+
+  .helpguide {
+    display: flex;
+    font-family: Arial, sans-serif;
+    width: 50vw;
+    height: 5vh;
+    border-radius: 14px;
+    margin: 10px 6px;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    border: 2px solid #e42a2a;
+    background-color: #e42a2a;
+    color: #f5f5f5;
   }
 
   .home--button {
     display: flex;
-    
-
+    font-family: Arial, sans-serif;
+    width: 50vw;
+    height: 5vh;
+    border-radius: 14px;
+    margin: 10px 6px;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    border: 2px solid #e42a2a;
+    background-color: #e42a2a;
+    color: #f5f5f5;
   }
 
+  .btn {
+    font-family: Arial, sans-serif;
+    width: 10vw;
+    height: 5vh;
+    border-radius: 14px;
+    margin: 10px 6px;
+    display: flex;
+    border: 2px solid #e42a2a;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    color: #f5f5f5;
+    
+    }
+
+
+    .hiddenbutton {
+      border:0;
+      background-color: #ffffff;
+      color: whitesmoke
+    
+    }
+
+    body {
+      background-image: url(/Users/jasonhowes/workspace/stopschedulev1/src/components/views/SS logo no text.jpg);
+      background-repeat: no-repeat;
+      background-position-x: center;
+      
+      
+    }
+
+    h1 {
+    font-size: 50px;
+    text-transform: none;
+    text-shadow: 1px 1px 1px #000000 ;
+    font-family: Arial, sans-serif;
+    letter-spacing: -3px;
+    transition: 700ms ease;
+    font-variation-settings: "wght" 100;
+    margin-bottom: 0.8rem;
+    color: #e42a2a;
+    outline:none;
+    text-align: center;
+  }
+  
+  h1:hover {
+    font-variation-settings: "wght" 582; 
+    letter-spacing: 1px;
+  }
+  
+    
+
+  h2 {
+    font-size: 30px;
+    text-transform: none;
+    text-shadow: 1px 1px 1px #000000 ;
+    font-family: Arial, sans-serif;
+    letter-spacing: -3px;
+    transition: 700ms ease;
+    font-variation-settings: "wght" 100;
+    margin-bottom: 0.8rem;
+    color: #e42a2a;
+    outline:none;
+    text-align: center;
+  }
+  
+  h2:hover {
+    font-variation-settings: "wght" 582; 
+    letter-spacing: 1px;
+  }
+  
+  a {
+    position: relative;
+  }
+  
+  a::before {
+      content: '';
+      position: absolute;
+      width: 100%;
+      height: 4px;
+      border-radius: 4px;
+      background-color: #000000;
+      bottom: 0;
+      left: 0;
+      transform-origin: right;
+      transform: scaleX(0);
+      transition: transform .7s ease-in-out;
+    }
+  
+  a:hover::before {
+    transform-origin: left;
+    transform: scaleX(1);
+  }
+
+  
